<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="161dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="164dp"
            android:gravity="bottom|right"
            android:text=""
            android:textColor="@color/white"
            android:textSize="40sp" />
    </ScrollView>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:rowCount="5">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="10sp"
            android:layout_height="8dp"
            android:layout_margin="10sp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_design2"
            android:gravity="center"
            android:padding="5dp"
            android:scaleType="fitXY"
            android:tag="1"
            android:text="@string/acb"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="10sp"
            android:layout_height="8dp"
            android:layout_margin="10sp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_design2"
            android:foreground="@drawable/backspace"
            android:foregroundGravity="center"
            android:scaleType="fitCenter"
            android:tag="1"
            android:textColor="@color/white"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            tools:targetApi="m" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="10sp"
            android:layout_height="8dp"
            android:layout_margin="10sp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_design2"
            android:gravity="center"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:tag="1"
            android:text="@string/aa"
            android:textColor="@color/white"
            android:textSize="45sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="10sp"
            android:layout_height="8dp"
            android:layout_margin="10sp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_design2"
            android:gravity="center"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:tag="1"
            android:text="@string/bb"
            android:textColor="@color/white"
            android:textSize="45sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="10sp"
            android:layout_height="8dp"
            android:layout_margin="10sp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_design"
            android:gravity="center"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:tag="1"
            android:text="@string/seven"
            android:textColor="@color/white"
            android:textSize="55sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="10sp"
            android:layout_height="8dp"
            android:layout_margin="10sp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_design"
            android:gravity="center"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:tag="1"
            android:text="@string/_8"
            android:textColor="@color/white"
            android:textSize="55sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="10sp"
            android:layout_height="8dp"
            android:layout_margin="10sp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_design"
            android:gravity="center"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:tag="1"
            android:text="@string/_9"
            android:textColor="@color/white"
            android:textSize="55sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="10sp"
            android:layout_height="8dp"
            android:layout_margin="10sp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_design2"
            android:gravity="center"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:tag="1"
            android:text="@string/division"
            android:textColor="@color/white"
            android:textSize="55sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="10sp"
            android:layout_height="8dp"
            android:layout_margin="10sp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_design"
            android:gravity="center"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:tag="1"
            android:text="@string/_4"
            android:textColor="@color/white"
            android:textSize="55sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="10sp"
            android:layout_height="8dp"
            android:layout_margin="10sp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_design"
            android:gravity="center"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:tag="1"
            android:text="@string/_5"
            android:textColor="@color/white"
            android:textSize="55sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="10sp"
            android:layout_height="8dp"
            android:layout_margin="10sp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_design"
            android:gravity="center"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:tag="1"
            android:text="@string/_6"
            android:textColor="@color/white"
            android:textSize="55sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="10sp"
            android:layout_height="8dp"
            android:layout_margin="10sp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_design2"
            android:gravity="center"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:tag="1"
            android:text="@string/x"
            android:textColor="@color/white"
            android:textSize="55sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="10sp"
            android:layout_height="8dp"
            android:layout_margin="10sp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_design"
            android:gravity="center"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:tag="1"
            android:text="@string/_1"
            android:textColor="@color/white"
            android:textSize="55sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="10sp"
            android:layout_height="8dp"
            android:layout_margin="10sp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_design"
            android:gravity="center"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:tag="1"
            android:text="@string/_2"
            android:textColor="@color/white"
            android:textSize="55sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="10sp"
            android:layout_height="8dp"
            android:layout_margin="10sp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_design"
            android:gravity="center"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:tag="1"
            android:text="@string/_3"
            android:textColor="@color/white"
            android:textSize="55sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="10sp"
            android:layout_height="8dp"
            android:layout_margin="10sp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_design2"
            android:gravity="center"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:tag="1"
            android:text="@string/subs"
            android:textColor="@color/white"
            android:textSize="55sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="10sp"
            android:layout_height="8dp"
            android:layout_margin="10sp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_design"
            android:foregroundGravity="center_vertical"
            android:gravity="center"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:tag="1"
            android:text="@string/dot"
            android:textColor="@color/white"
            android:textSize="55sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="10sp"
            android:layout_height="8dp"
            android:layout_margin="10sp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_design"
            android:gravity="center"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:tag="1"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="55sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="10sp"
            android:layout_height="8dp"
            android:layout_margin="10sp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_design3"
            android:gravity="center"
            android:padding="1dp"
            android:scaleType="fitXY"
            android:tag="1"
            android:text="@string/equal"
            android:textColor="@color/white"
            android:textSize="55sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="10sp"
            android:layout_height="8dp"
            android:layout_margin="10sp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_design2"
            android:gravity="clip_horizontal|center|clip_vertical|center_horizontal|center_vertical"
            android:padding="1dp"
            android:scaleType="fitCenter"
            android:tag="1"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="65sp"
            app:layout_columnWeight="1"
            app:layout_gravity="center|clip_vertical|center_horizontal|fill"
            app:layout_rowWeight="1" />

    </androidx.gridlayout.widget.GridLayout>

    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="58dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19">

        <TextView
            android:id="@+id/textView"
            android:layout_width="290dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:drawableRight="@drawable/ic_baseline_label_important_24"
            android:gravity="center|left"
            android:text="Mathematical Tools"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_marginLeft="15dp"/>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginTop="14dp"
            android:layout_marginStart="30dp"

            android:background="@drawable/button_design2"
            android:foreground="@drawable/ic_baseline_label_important_24"
            android:contentDescription="TODO" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>