<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black_bg"
    tools:context=".Quadratic_Equation">

    <TextView
        android:id="@+id/home_screen1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/box_design"
        android:foreground="@drawable/ic_baseline_home_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />

    <TextView
        android:id="@+id/textView200"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="155dp"
        android:layout_marginBottom="557dp"
        android:gravity="center"
        android:text="Enter the coefficent to obtain the required roots (ax^2+bx+c=0)"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:textSize="20dp"
        android:gravity="center|left"
        android:layout_marginLeft="10dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView200"
        app:layout_constraintVertical_bias="0.035" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginTop="398dp"
        android:foregroundGravity="bottom|center"
        android:gravity="bottom|center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75">

        <EditText
            android:id="@+id/editTextNumberSigned"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="1"
            android:background="@drawable/box_design"
            android:baselineAligned="true"
            android:ems="10"
            android:foregroundGravity="bottom"
            android:gravity="center_vertical"
            android:hint="@string/cofficent_of_a"
            android:inputType="numberSigned|numberDecimal"
            android:paddingLeft="7sp"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/editTextNumberSigned2"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="1"
            android:background="@drawable/box_design"
            android:baselineAligned="false"
            android:ems="10"
            android:foregroundGravity="bottom"
            android:hint="@string/cofficent_of_b"
            android:inputType="numberSigned|numberDecimal"
            android:paddingLeft="7sp"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/editTextNumberSigned3"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="1"
            android:background="@drawable/box_design"
            android:baselineAligned="false"
            android:ems="10"
            android:hint="@string/cofficent_of_c"
            android:inputType="numberSigned|numberDecimal"
            android:paddingLeft="7sp"
            android:textSize="30dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="171dp"
        android:layout_height="61dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="2dp"
        android:background="@drawable/button_design2"
        android:foregroundGravity="center"
        android:gravity="center"
        android:shadowColor="@color/purple_500"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.84000003" />


    <TextView
        android:id="@+id/retry1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/box_design"
        android:foreground="@drawable/ic_baseline_refresh_24"
        android:onClick="retry1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />
</androidx.constraintlayout.widget.ConstraintLayout>